examples/test/testpolicy18937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18937
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key12: value7
      key28: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value12
          key44: value47
      podSelector:
        matchLabels:
          key8: value34
